# BE-Elasticite

./: .gitignore  README.md  elasticite.ipynb  elasticite.py  main_elasticite_stat_2D.py  main_elasticite_stat_2D_propre.py  pyproject.toml
src/be_elasticite/: elasticite.py
