[project]
name = "be-elasticite"
version = "0.1.0"
description = ""
authors = [
    {name = "Dorianhgn",email = "dorianhugonnet1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib (==3.6)",
    "scipy (>=1.15.2,<2.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)"
]

[tool.poetry]
packages = [{include = "be_elasticite", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
